fix overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
     font-family: 'Fraunces', serif;
     font-size: 18px;
     box-sizing:border-box;
+    max-width: 100vw;
   
 }
 
@@ -37,14 +38,16 @@ body {
     display: flex;
     flex-direction: column;
     max-width:100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    
 }
+
 
 // header
 
 .header-container {
-   
-    width: 100%;
+  
+    
     background-color: #3EBFFF;
     height: 4.6875rem;
     display: flex;
@@ -66,6 +69,7 @@ body {
     }
 
     .nav-item-container {
+        
             display: flex;
             list-style: none;
 
@@ -82,6 +86,7 @@ body {
             }
 
             .nav-item-btn {
+                
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: 0.9375rem;
@@ -105,6 +110,7 @@ body {
 
     // first section
     .first-section-container {
+       
         max-width: 100vw;
         height: 42em;
         background-image: url(../images/desktop/image-header.jpg);
@@ -113,6 +119,7 @@ body {
         background-size: cover;
 
         .title-container {
+            
             width: 100vw;
             height: 100vh;
             display: flex;
@@ -132,9 +139,18 @@ body {
 
             .container-img {
                 padding-bottom: 2rem;
+              
             }
         }
     }
 
 
     // end first section
+
+
+    .second-section-container{
+        height: 500px;
+        img{
+            height: 500px;
+        }
+    }
